--- a/bluestyle.css
+++ b/bluestyle.css
@@ -7,3 +7,13 @@ h1 {
     color: navy;
     margin-left: 20px;
 }
+
+.jimbaran {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    max-width: 960px;
+    max-height: 960px;
+    display: block;
+    margin: 0 auto;
+}
